# compmathlab6

client/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/modules/common/components/: Navbar.tsx
client/src/modules/common/pages/: NotFoundPage.tsx
client/src/modules/diffeq/: types.ts
client/src/modules/diffeq/api/: api.ts  types.ts  utils.ts
client/src/modules/diffeq/components/: ExtrasBlock.tsx  FloatInput.tsx  ImportJson.tsx  ImportModal.tsx  ImportPreset.tsx  ParamsBlock.tsx  SimulateButton.tsx  VisualizationBlock.tsx  VisualizationPlot.tsx  VisualizationTable.tsx
client/src/modules/diffeq/pages/: MainPage.tsx
client/src/modules/diffeq/utils/: mathjs.ts  presets.ts  utils.ts
client/src/routes/: index.tsx
client/src/store/: index.ts  simulation.reducer.ts
server/: pyproject.toml
server/src/: config.py  main.py
server/src/modules/diffeq/: router.py  schemas.py  service.py
server/src/modules/diffeq/core/: types.py  utils.py
server/src/modules/diffeq/core/solvers/: adams.py  base.py  euler.py  mod_euler.py  rk4.py
