[project]
name = "compmathlab6server"
version = "0.1.0"
description = ""
authors = [
    {name = "lavrentious",email = "lavrent0@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
autoflake = "^2.3.1"
mypy = "^1.15.0"
black = "^25.1.0"

[tool.mypy]
mypy_path = "./server/src" # gobno
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
